--- a/styles.css
+++ b/styles.css
@@ -43,9 +43,10 @@ body {
 }
 
 .small-display {
-    font-size: 22px;
+    font-size: 24px;
     margin-right: 8px;
     margin-bottom: 12px;
+    overflow: auto;
 }
 
 .buttons-container {
