Improve sequential calculating e.g. 12+12 = 24 then if you type 1 it becomes 12+121 = 133

--- a/styles.css
+++ b/styles.css
@@ -29,12 +29,19 @@ body {
 }
 
 .display {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     background-color: #757575;
     border-radius: 8px;
     height: 100px;
     width: 100%;
     margin-bottom: 24px;
     text-align: end;
+    flex: 1 0 auto;
+    overflow: auto;
+
+    
 }
 
 .big-display {
